Server ist im Lan und nicht mehr auf dem Lokal Loopback erreichbar

--- a/discipulus/templates/index.html
+++ b/discipulus/templates/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="" />
     <meta name="generator" content="Webocton - Scriptly (www.scriptly.de)" />
 
-    <link href="style.css" type="text/css" rel="stylesheet" />
+    <!--<link href="style.css" type="text/css" rel="stylesheet" />-->
     
     <script src="jquery"></script>
     <!--<script language="javascript" type="text/javascript" src="main.js"></script>-->
